--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [project]
-name = "reports"
+name = "Control de Reportes"
 version = "0.1.0"
 description = ""
 readme = "README.md"
 requires-python = ">=3.9"
 authors = [
-    { name = "Flet developer", email = "you@example.com" }
+    { name = "Flet developer", email = "joetectronic@gmail.com" }
 ]
 dependencies = [
   "flet==0.27.5"
